adding automatic language redirect

--- a/_posts/en/pages/2014-08-23-index.html
+++ b/_posts/en/pages/2014-08-23-index.html
@@ -38,3 +38,11 @@ permalink: /
 	{% endfor %}
 	<p class="copyright">&copy;{{ site.time | date: "%Y" }}, <a href="{{ site.copyright.url }}" target="_blank">{{ site.copyright.author }}</a>. <a href="{{ site.copyright.type_url }}" target="_blank">{{ site.copyright.type_title }}</a>.</p>
 </footer>
+<script>
+	if (navigator.appName == 'Netscape')
+		var language = navigator.language;
+	else 
+		var language = navigator.browserLanguage;
+
+	if (language.indexOf('zh') > -1) document.location.href = '/zh';
+</script>
